--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Mark Nguyen <mnguyen4@apple.com>"]
 edition = "2018"
 
 [dependencies]
+serde = "1.0.79"
+serde_derive = "1.0.79"
+serde_json = "1.0.32"
